Bug 312128 - Amarok doesn't update database playlists when track's uid url changes
Summary: Amarok doesn't update database playlists when track's uid url changes
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/Local (other bugs)
Version First Reported In: 2.6.90 (2.7 beta)
Platform: Other Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on: 308371
Blocks:
  Show dependency treegraph
 
Reported: 2012-12-23 18:39 UTC by Matěj Laitl
Modified: 2012-12-23 22:46 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matěj Laitl 2012-12-23 18:39:17 UTC
This is a bugreport for the second part of the bug 308371. From the original bug:

> Maybe I edited the metadata of songs that were already referenced in a playlist in
> the amarok database. When I opened the playlist, two songs were greyed and did
> not play.

> Right click -> searching for module AMAROK-SQLTRACKUID. Then amarok was not
> responding for a few minutes, but the module does not seem to be installed, the
> two songs still do not play.

This part has been already solved.

> Reproducible: Always
> Steps to Reproduce:
> 1. Save a playlist in the DB
> 2. Edit the metadata of a song in the playlist
> 3. Re-open the playlist Actual Results: The edited song is greyed and can not be played
Comment 1 Matěj Laitl 2012-12-23 18:46:04 UTC
Git commit 2f261b02ede0ecc9a566cbcb2680e06db092dbc1 by Matěj Laitl.
Committed on 23/12/2012 at 19:42.
Pushed by laitl into branch 'master'.

Fix SqlTrack::updatePlaylistToDb(): we need to update url too

This fixes all the remaining problems originally reported in bug 308371.
I've confirmed it works both then the track uid change is triggered from
within Amarok and from external tool when Amarok is not running.

BUGFIXES:
 * Fix updating of Amarok database playlists then track uid changes.
Related: bug 308371
FIXED-IN: 2.7

M  +1    -0    ChangeLog
M  +15   -11   src/core-impl/collections/db/sql/SqlMeta.cpp
M  +1    -0    src/playlistmanager/sql/SqlPlaylist.cpp

http://commits.kde.org/amarok/2f261b02ede0ecc9a566cbcb2680e06db092dbc1
Comment 2 Walter von Entferndt 2012-12-23 22:42:05 UTC
Dear Matěj,

I regret having caused trouble.  Thanx for your patience and insistence to fix 
the bug.

I wish you a peaceful and merry X-Mas.
Comment 3 Matěj Laitl 2012-12-23 22:46:28 UTC
(In reply to comment #2)
> Dear Matěj,

Hi Torsten,

> I regret having caused trouble.

No serious trouble caused, you couldn't have known our bugzilla usage in advance.

> Thanx for your patience and insistence to fix  the bug.
> 
> I wish you a peaceful and merry X-Mas.

Thanks, to you too. :-)