Fix SqlTrack::updatePlaylistToDb(): we need to update url too

This fixes all the remaining problems originally reported in bug 308371.
I've confirmed it works both then the track uid change is triggered from
within Amarok and from external tool when Amarok is not running.

BUGFIXES:
 * Fix updating of Amarok database playlists then track uid changes.

BUG: 312128
CCBUG: 308371
FIXED-IN: 2.7